@@ -1,5 +1,6 @@
 [mod-setting-name]
 tiergen-reduce-category=Decrement category tier's
+tiergen-consider-technology=Consider technology
 tiergen-reduce-technology=Decrement technology tier's
 tiergen-item-calculation=Items to calculate
 tiergen-base-items=Base item overrides
