@@ -3,6 +3,7 @@ Version: 0.2.1
 Date: ????
   Features:
     - Settings are now global and the list will be updated to match the settings
+    - Add a setting to toggle on whether or not to consider technology when calculating
   Optimizations:
     - Now marks incalculable items and unmarks them once the blocking item is calculated
   Bugfixes:
